2018-04-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* "to"-conversion for physical constants

2018-04-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for "handle vector" argument property

2018-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Time zone conversion

2018-04-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow user to change decimal separator (and consequently argument separator)

2018-03-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix function completion

2018-03-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use the currency menu structure for to button menu when currency unit in result,
	  and the display all remaining units in the first more menu for other units
	* List all currencies in conversion tab
	* Hide hidden items (including extra currencies) from completion
	* Use recursive directory creation
	* Fix save/load of interval arithmetic state
	* Add version command line option

2018-02-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add integrate() and dsolve() to button menu

2018-02-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix history height not reducable
	* Remove wrong tooltips from percentage calculation tool

2018-02-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Resize result vertically when the window is resized, if keypad/history/conversion is hidden

2018-01-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Plot line width setting

2018-01-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add y min/max to plot dialog
	* Hide color/monochrome setting (has no effect)
	* Increase default and maximum number of plot samples
	* Allow resizing of plot dialog
	* Add option to not copy digit separator

2018-01-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Implement completion only name property in GUI

2018-01-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix never ending cell cycling with tab on last cell in matrix dialog (issue #33)
