@@ -1,3 +1,7 @@
+2018-04-11 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix set (optimal) prefix when result is converted to composite unit (with prefix)
+
 2018-04-09 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* "to"-conversion for physical constants
